@@ -35,6 +35,8 @@ Version 1.3-svn:
    * star shaped "ellipses" for leaders and hero units
    * crown icons for heros and expendable allied leaders.
    * item graphic improvements including animate-able campfire.
+   * added the option to draw overlays on terrains filter by
+     location, selected and mouseover hex
    * terrain
      * added peaks to the impassable mountains
      * added bridges crossing swamp and deep water
